--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wx-token-server"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,6 +10,8 @@ lazy_static = "*"
 actix-web = "3"
 serde = "1.0.117"
 serde_json = "1.0.59"
+futures = "0.3.15"
+qstring = "0.7.2"
 
 [dependencies.reqwest]
 version = "0.11.3"
