--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout code
-      - uses: actions-rs/toolchain@v1
-        name: Select toolchain
+      - uses: actions-rs/rust-toolchain@v1
+        name: Select rust-toolchain
         with:
           toolchain: nightly
       - uses: actions-rs/cargo@v1
